Fixed horizontal scrolling

--- a/index.css
+++ b/index.css
@@ -3,6 +3,13 @@ body {
   font-family: Arial;
   font-size: 20px;
   width: 100%;
+  max-width: 1280px;
+  margin: auto;
+}
+
+header {
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .head-wrap {
@@ -107,7 +114,7 @@ a {
 }
 
 .game-control-wrap {
-  max-width: 1280px;
+  max-width: 1100px;
   /* border: solid 1px blue; */
   margin: 8px auto;
   height: 100px;
@@ -136,3 +143,9 @@ a {
   line-height: 50px;
   margin: 0 20px;
 }
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
